--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ targetCompatibility = 1.7
 repositories {
     mavenCentral()
     mavenLocal()
+    jcenter()
+    maven {
+        url "http://dl.bintray.com/jtwig/maven"
+    }
 }
 
 buildscript {
