--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'org.jtwig.release'
 apply from: 'gradle/jtwig-plugins/version-release.gradle'
 apply from: 'gradle/jtwig-plugins/coverage-support.gradle'
 apply from: 'gradle/jtwig-plugins/ide-support.gradle'
@@ -20,11 +21,15 @@ buildscript {
     repositories {
         mavenCentral()
         jcenter()
+        maven {
+            url "http://dl.bintray.com/jtwig/maven"
+        }
     }
 
     dependencies {
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
+        classpath 'org.jtwig:jtwig-release-plugin:1.+'
     }
 }
 
@@ -41,4 +46,23 @@ dependencies {
 
     provided 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
     provided 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+}
+
+jtwigRelease {
+    version = System.getenv("JTWIG_VERSION")
+
+    git {
+        username = System.getenv("GITHUB_USER")
+        password = System.getenv("GITHUB_PASS")
+    }
+
+    github {
+        username = System.getenv("GITHUB_USER")
+        token = System.getenv("GITHUB_TOKEN")
+    }
+
+    bintray {
+        user = System.getenv("BINTRAY_USER")
+        apiKey = System.getenv("BINTRAY_KEY")
+    }
 }
